--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "googletest"]
-	path = googletest
+[submodule "3rdParty/googletest"]
+	path = 3rdParty/googletest
 	url = https://github.com/google/googletest.git
