--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rdParty/googletest"]
 	path = 3rdParty/googletest
 	url = https://github.com/google/googletest.git
+[submodule "3rdParty/curl"]
+	path = 3rdParty/curl
+	url = https://github.com/curl/curl.git
