--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 if (ENABLE_TESTING)
     #For Microsoft Compiler
-    #    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
     file(GLOB tests_src
             *.cpp
@@ -12,7 +12,7 @@ if (ENABLE_TESTING)
     )
 
     target_link_libraries(MovieDataFetcherTests PRIVATE
-            GTest::gtest_main
+            GTest::gtest
             GTest::gmock
             MovieDataFetcher
             )
